<resources>
    <string name="app_name">Autoparts</string>

    <!-- Login -->
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="password_length_error">Enter minimum 6 characters for password</string>
    <string name="login_error">Check your email and password. Authentication failed.</string>

    <!-- Address -->
    <string name="address_title">Address</string>
    <string name="address">Delivery address</string>
    <string name="add_address">Add address</string>
    <string name="address_zip_code">Zip Code</string>
    <string name="address_city">City</string>
    <string name="address_street">Street</string>
    <string name="address_name">Address name</string>
    <string name="address_save">Sace</string>

    <!-- History -->
    <string name="history_title">History order</string>
    <string name="history_date">Date</string>
    <string name="history_status">Status</string>
    <string name="history_order">Order</string>

    <!-- Car Info -->
    <string name="auto_info_title">Auto Information</string>
    <string name="auto_info_add">Add auto</string>
    <string name="auto_info_mark">Mark</string>




    <string name="auth_granted">Authorization granted</string>
    <string name="exchange_complete">Exchange completed successfully</string>
    <string name="refresh_failed">Token refresh failed</string>
    <string name="exchange_notification">Exchanging code for token</string>
    <string name="intro_header">OpenID AppAuth Demo</string>
    <string name="openid_logo_content_description">OpenID Foundation Logo</string>
    <string name="refresh_token">Refresh token</string>
    <string name="access_token_expires_at">Access token expires at: %s</string>
    <string name="no_access_token_returned">No access token returned</string>
    <string name="no_refresh_token_returned">No refresh token returned</string>
    <string name="refresh_token_returned">Refresh token returned</string>
    <string name="no_id_token_returned">No ID token returned</string>
    <string name="id_token_returned">ID token returned</string>
    <string name="view_profile">View user info</string>
    <string name="unknown_expiry">unknown</string>
    <string name="auth_header">Sign in with:</string>
    <string name="no_idps_configured">No IDPs are configured. Please edit idp_configs.xml</string>
    <string name="authorization_failed">Authorization failed</string>
    <string name="userinfo_profile_content_description">User profile picture</string>
    <string name="login_hint_value">Account ID (e.g. test@gmail.com)</string>
    <string name="account_id_description">The Account ID is optional. If specified, it is transmitted as a login_hint parameter in the authorization request.</string>
    <string name="auth_options">Authorization options:</string>
    <string name="browser_selector_label">Use browser:</string>
    <string name="browser_icon_contentDescription">Browser app icon</string>
    <string name="browser_appauth_default_label">AppAuth heuristic selection</string>
    <string name="custom_tab_label">"%1$s (custom tab)"</string>
    <string name="authorization_login_hint">Логин</string>
    <string name="authorization_password_hint">Пароль</string>
    <string name="logIn">Войти</string>
    <string name="login_signUp">SignUp</string>
    <string name="signUp">SignUp</string>

    <string name="menu_nav_home">Home</string>
    <string name="menu_nav_chat">Chat</string>
    <string name="menu_nav_car">Car Info</string>
    <string name="menu_nav_history">History</string>
    <string name="menu_nav_settings_apps">Settings App</string>
    <string name="menu_nav_exit_to_app">Logout</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
</resources>
