<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_main"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_nav_home"/>
        <item
            android:id="@+id/menu_nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_nav_chat"/>
        <item
            android:id="@+id/menu_nav_car"
            android:icon="@drawable/ic_car"
            android:title="@string/menu_nav_car"/>
        <item
            android:id="@+id/menu_nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_nav_history"/>
    </group>
    <group>
            <item
                android:id="@+id/menu_nav_logout"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/menu_nav_exit_to_app"/>
    </group>
</menu>