<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".view.ui.activity.login.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/appauth_96dp"/>

            <android.support.v4.widget.Space
                android:id="@+id/medium"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:foreground="?selectableItemBackground"
                app:cardBackgroundColor="#A0FFFFFF"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:elevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorTextAppearance="@style/error_appearance">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/inputLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/authorization_login_hint"
                            android:inputType="textEmailAddress"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorTextAppearance="@style/error_appearance">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/authorization_password_hint"
                            android:inputType="textPassword"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        style="@style/MyButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:paddingBottom="0dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingTop="0dp"
                        android:text="@string/logIn"/>

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@string/login_signUp"
                        android:gravity="center"
                        android:textSize="16sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>